# Copyright (C) 2016 Marcus Heese
#
# This file is part of nss_alexandria.
#
# nss_alexandria is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# nss_alexandria is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with nss_alexandria.  If not, see <http://www.gnu.org/licenses/>.

[package]
name = "nss_alexandria"
version = "0.2.0"
authors = ["Marcus Heese <marcus.heese@gmail.com>"]
license = "GPL-3.0"
repository = "https://github.com/mheese/nss_alexandria.git"
keywords = ["nss", "alexandria"]
description = "A NSS library for the Alexandria Directory"

[dependencies]
libc = { version = "0.2", default-features = false }
hyper = { version = "0.8", default-features = false }
hyperlocal = { version = "0.1", default-features = false, git = "https://github.com/mheese/hyperlocal.git" }
rustc-serialize = { version = "0.3", default-features = false }

[lib]
crate-type = ["dylib"]
